recursion.cons.nth.Nth.scala.error
Erreur de compilation :
Nth:4: error: value c is not a member of object Int
    Int c=count + 1;
        ^Nth:5: error: not found: value c
    if (l == Nil) return c;
                         ^Nth:6: error: not found: value c
    if(c == tn){
       ^Nth:10: error: not found: value c
      return lambda(l.tail, n, c);
                               ^